[workspace]
members = [
  "crypto-client",
  "crypto-crawler",
  "crypto-markets",
  "crypto-market-type",
  "crypto-msg-type",
  "crypto-rest-client",
  "crypto-ws-client",
]

[patch.crates-io]
crypto-message = { path = "../crypto-msg-parser/crypto-message" }
crypto-msg-parser = { path = "../crypto-msg-parser/crypto-msg-parser" }
